# antigravity-event-talks-app

./: .agents-cli-spec.md  .env.sample  .gitignore  GEMINI.md  README.md  agents-cli-manifest.yaml  app.py  database.py  pyproject.toml  relatorio_projeto.md  requirements.txt  threat_model.md
.agents/: AGENTS.md  CONTEXT.md
docs/pending/travel-planning/: SKILL.md
docs/pending/travel-planning/agents/: openai.yaml
docs/superpowers/plans/: 2026-06-30-free-tier-model-routing.md  2026-06-30-secure-adk-travel-planner.md
docs/superpowers/specs/: 2026-06-30-free-tier-model-routing-design.md  2026-06-30-secure-adk-travel-planner-design.md
static/: api.js  app.js  media.js  style.css
templates/: index.html
tests/eval/: eval_config.yaml
tests/eval/datasets/: basic-dataset.json
tests/frontend/: app.test.mjs
tests/integration/: test_api.py  test_orchestration_service.py
tests/unit/: test_agent_structure.py  test_database.py  test_logging_config.py  test_mcp_server.py  test_models.py  test_project_artifacts.py  test_security.py
trip_planner/: __init__.py  agent.py  logging_config.py  mcp_server.py  models.py  security.py  service.py
